--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 <i class="text-center fa fa-sitemap fa-5x"></i>
              </div>
         </div>
-        <h4 class="clearmarg why">Simple, Beautiful, and Visual</h4>
-        <p>Keep track of everything you're working on - documents, activities, research, and details related to your career development and management.</p>
+        <h4 class="clearmarg why">Simple and Visual</h4>
+        <p class="text-center">Keep track of everything you're working on - notes, activities, research, etc in a simple and elegant manner.</p>
         </div>
       </div>
       <div class="small-12 large-4 columns">
@@ -144,8 +144,8 @@
                     <span><i class="fa fa-key fa-5x "></i></span>
                 </div>    
             </div>
-            <h4 class="clearmarg why">Relevant advice and content</h4>
-                <p>Why be inundated with irrelevant information? How aboutcontent relevant to where you are in your career journey?</p>    
+            <h4 class="clearmarg why">Relevant</h4>
+                <p>Get content, advice and coaching relevant to where you are in your search and what you are looking for.</p>    
         </div>
       </div>
       <div class="small-12 large-4 columns">
@@ -155,8 +155,8 @@
                     <span><i class="fa fa-comments fa-5x "></i></span>
                 </div>    
             </div>    
-            <h4 class="clearmarg why">Prepare</h4>
-                <p>Better for key career activities such as interviews and meetings
+            <h4 class="clearmarg why">Preparation</h4>
+                <p>Better prepare for activities such as interviews and meetings with notifications and reminders.
                 </p>
             </div>
           </div>
@@ -174,7 +174,7 @@
                     </div>
                 </div>   
               <h4 class="clearmarg why">Free</h4>
-                <p>For students and career seekers.</p>
+                <p>As a career seeker, enjoy everything Pursuits has to offer, without ever paying.</p>
               </div>  
             </div>
             <div class="small-12 large-4 columns">
@@ -185,7 +185,7 @@
                     </div>    
                 </div>    
                 <h4 class="clearmarg why">Organization, your way</h4>
-                    <p> Documents, activities, and details related to your career development and management. Better yet, organize them the way you want.<p/>
+                    <p> Pursuits is flexible - Customize it in a way that works best for you, your process, and your needs.   <p/>
                 </div>
               </div>
               <div class="small-12 large-4 columns">
@@ -195,8 +195,8 @@
                             <i class="fa fa-tasks fa-5x "></i></span>
                         </div>    
                     </div>    
-                  <h4 class="clearmarg why">Multi-task Easily</h4>
-                    <p>Searching for a full-time job? A part-time job too? How about volunteer opportunities? Manage everything in the same place.</p>
+                  <h4 class="clearmarg why">Simplify Multi-Tasking</h4>
+                    <p>Pursuits is intuitive which lends itself to easily manage your career search.</p>
                   </div>
                 </div>
               </div>
